--- a/i3/config
+++ b/i3/config
@@ -12,12 +12,12 @@
 set $mod Mod4
 set $lockcmd i3lock
 set $barcmd i3status
-set $wallpaper ~/Pictures/Wallpapers/FWG_2560x1440.png
+set $wallpaper ~/Pictures/current.jpg
 set $fontsize 10
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace $fontsize 
+font pango:monospace $fontsize
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -45,11 +45,16 @@ exec --no-startup-id start-pulseaudio-x1
 # Launch Dropdox at startup
 exec --no-startup-id dropbox start
 
+# Key repeat/delay
+exec --no-startup-id xset r rate 185 100
+# 185 -  delay
+# 100 - interval
+
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec alacritty 
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -62,7 +67,7 @@ bindsym $mod+d exec dmenu_run
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # lock screen
-bindsym $mod+l exec $lockcmd -c 111111 
+bindsym $mod+l exec $lockcmd -c 111111
 
 # change focus
 bindsym $mod+j focus left
@@ -253,6 +258,6 @@ client.urgent           #C10004 #900000 #ffffff #900000
 bar {
         font pango:monospace $fontsize
         position top
-        status_command $barcmd --config ~/.i3/status.conf
+        status_command $barcmd --config ~/.config/i3/status.conf
 }
 
