--- a/i3/config
+++ b/i3/config
@@ -46,7 +46,7 @@ exec --no-startup-id start-pulseaudio-x1
 exec --no-startup-id dropbox start
 
 # Key repeat/delay
-exec --no-startup-id xset r rate 190 50
+exec --no-startup-id xset r rate 150 40
 # 185 -  delay
 # 100 - interval
 
@@ -57,10 +57,12 @@ floating_modifier $mod
 bindsym $mod+Return exec alacritty
 
 # kill focused window
-bindsym $mod+Shift+q kill
+bindsym $mod+q kill
 
-# start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+# start rofi (a program launcher)
+bindsym $mod+d exec rofi -combi-modi window#run -show combi -modi combi
+# bindsym $mod+d exec dmenu_run
+
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -203,8 +205,18 @@ bindsym $mod+Ctrl+2 [workspace=$ws2] kill
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
+
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+#bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+
+bindsym $mod+x mode "exit: [l]ogout, [r]eboot, [s]hutdown"
+mode "exit: [l]ogout, [r]eboot, [s]hutdown" {
+  bindsym l exec i3-msg exit
+  bindsym r exec systemctl reboot
+  bindsym s exec systemctl shutdown
+  bindsym Escape mode "default"
+  bindsym Return mode "default"
+}
 
 # ====================
 # Taking screenshots
@@ -255,9 +267,27 @@ client.urgent           #C10004 #900000 #ffffff #900000
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
+# bar {
+#         font pango:monospace $fontsize
+#         position top
+#         status_command $barcmd --config ~/.config/i3/status.conf
+# }
+
+# Start i3bar to display a workspace bar (plus the system information i3status
+# finds out, if available)
 bar {
-        font pango:monospace $fontsize
-        position top
-        status_command $barcmd --config ~/.config/i3/status.conf
+    tray_output HDMI-1
+    font pango:monospace, FontAwesome 12
+    position top
+    status_command ~/bin/i3status-rs /home/aubinlrx/.config/i3/status.toml
+    colors {
+        separator #666666
+        background #222222
+        statusline #dddddd
+        focused_workspace #0088CC #0088CC #ffffff
+        active_workspace #333333 #333333 #ffffff
+        inactive_workspace #333333 #333333 #888888
+        urgent_workspace #2f343a #900000 #ffffff
+   }
 }
 
