--- a/i3/status.toml
+++ b/i3/status.toml
@@ -2,19 +2,11 @@ theme = "solarized-dark"
 icons = "awesome"
 
 [[block]]
-block = "temperature"
-
-[[block]]
 block = "music"
 max_width = 21
 marquee = false
 player = "spotify"
 buttons = ["play", "next"]
-
-[[block]]
-block = "load"
-interval = 1
-format = "{1m} {5m} {15m}"
 
 [[block]]
 block = "cpu"
@@ -36,12 +28,11 @@ unit = "GB"
 interval = 20
 
 [[block]]
-block = "disk_space"
-path = "/home/aubinlrx"
-alias = "~"
-info_type = "available"
-unit = "GB"
-interval = 20
+block = "net"
+device = "wlp2s0"
+ssid = false
+ip = false
+interval = 5
 
 [[block]]
 block = "sound"
