--- a/i3/config
+++ b/i3/config
@@ -188,6 +188,8 @@ assign [class="Slack|Google Hangouts|Signal|Telegram"] $ws3
 # Assign floating windows.
 for_window [class="feh|mpv"] floating enable
 for_window [class="Peek"] floating enable
+for_window [class="Nautilus"] floating enable
+for_window [class="Evince"] floating enable
 
 # Remove the titlebar.
 for_window [class="mpv"] border pixel 1
@@ -222,7 +224,7 @@ bindsym $mod+x mode "exit: [l]ogout, [r]eboot, [s]hutdown"
 mode "exit: [l]ogout, [r]eboot, [s]hutdown" {
   bindsym l exec i3-msg exit
   bindsym r exec systemctl reboot
-  bindsym s exec systemctl shutdown
+  bindsym s exec shutdown -h now
   bindsym Escape mode "default"
   bindsym Return mode "default"
 }
@@ -232,8 +234,9 @@ mode "exit: [l]ogout, [r]eboot, [s]hutdown" {
 # ====================
 # Fullscreen
 bindsym Print exec "flameshot gui"
-# Screenshot with selection
-bindsym Shift+Print exec "sleep 0.4; scrot -q 100 -s ${HOME}'/Pictures/Screenshots/%Y-%m-%d-%H-%M-%S_$wx$h.png' -e 'xclip $f -selection clipboard -t image/png -i $f'"
+
+# Recording
+bindsym Shift+Print exec "~/git/aubinlrx/gif-recorder/gif-recorder"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
