--- a/i3/config
+++ b/i3/config
@@ -108,7 +108,7 @@ bindsym $mod+f fullscreen toggle
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+# bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -186,7 +186,7 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 assign [class="Slack|Google Hangouts|Signal|Telegram"] $ws3
 
 # Assign floating windows.
-for_window [class="feh|mpv"] floating enable
+for_window [class="feh|mpv|zathura"] floating enable
 for_window [class="Peek"] floating enable
 for_window [class="Nautilus"] floating enable
 for_window [class="Evince"] floating enable
@@ -237,6 +237,12 @@ bindsym Print exec "flameshot gui"
 
 # Recording
 bindsym Shift+Print exec "~/git/aubinlrx/gif-recorder/gif-recorder"
+
+# Open Explorer (nautilus)
+bindsym $mod+e exec "nautilus ~"
+
+# Open gif directory
+bindsym $mod+g exec "nautilus ~/Pictures/Gifs"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
