update i3 status bar with keyboard layout

--- a/i3/status.toml
+++ b/i3/status.toml
@@ -35,6 +35,11 @@ ip = false
 interval = 5
 
 [[block]]
+block = "keyboard_layout"
+driver = "setxkbmap"
+interval = 15
+
+[[block]]
 block = "sound"
 
 [[block]]
