--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -28,6 +28,7 @@
 	excludesfile = ~/.gitignore
 	pager = diff-so-fancy | less --tabs=4 -RFX
 	autocrlf = input
+	ignorecase = false
 
 [alias]
     # list contributors with number of commits
