--- a/shell/.alacritty.yml
+++ b/shell/.alacritty.yml
@@ -104,14 +104,14 @@ font:
   size: 18.0
 
   normal:
-    family: 'JetBrains Mono'
+    family: 'JetBrainsMono Nerd Font Mono'
     style: Regular
 
   bold:
-    family: 'JetBrains Mono'
+    family: 'JetBrainsMono Nerd Font Mono'
     style: Bold
 
   italic:
-    family: 'JetBrains Mono'
+    family: 'JetBrainsMono Nerd Font Mono'
     style: Italic
 
