Tweak: some update for MacOS on M1 chip

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,10 +1,8 @@
-
-[user]
-	name = Aubin Lorieux
-	email = aubin.lorieux@gmail.com
-
 [includeIf "gitdir:~/git/winddle/"]
-    path = ~/git/winddle/.gitconfig
+    path = ~/.gitconfig-winddle
+
+[includeIf "gitdir:~/git/aubinlrx/"]
+    path = ~/.gitconfig-perso
 
 [status]
 	# also show individual files in untracked directories
