--- a/ssh/config
+++ b/ssh/config
@@ -2,7 +2,7 @@ Host github.com
   User git
   IdentityFile ~/.ssh/id_rsa
 
-Host winddle.github.com
+Host aubinlrx.github.com
   HostName github.com
   User git
-  IdentityFile ~/.ssh/winddle_rsa
+  IdentityFile ~/.ssh/aubinlrx_rsa
